added:Name to form

--- a/Form.css
+++ b/Form.css
@@ -38,28 +38,63 @@ body {
 
 * { box-sizing: border-box; }
 
-.main-content {
-    display: flex; 
-    flex-direction: column; 
-    min-height: calc(100vh - 80vh); 
-    background-color: #f7f7f7; 
-    padding: 30px 0 10px; 
-    box-sizing: border-box;
-  } 
-  
-  .header-content { 
-    display: flex; 
-    flex-direction: row; 
-    justify-content: space-between; 
-    align-items: center; 
-    width: 80%; 
-    margin: 0 auto; 
-    padding-bottom: 25px; 
-  } 
-  
-  .emp-detail-text { 
-    font: normal normal bold 24px/25px Arial; 
-    letter-spacing: 0px; 
-    color:#42515f; 
-    opacity: 1; 
-  }
+.form-content {
+    min-height: calc(100% 80%);
+    background-color: #f7f7f7;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 0 solid green;
+}
+
+.form {
+    width: 65%;
+		padding: 44px 60px;
+		border-radius: 8px;
+		opacity: 1;
+		border: 1px solid #f5f5f5;
+		box-shadow: 0px 3px 6px #00000029;
+		background: white 0% 0% no-repeat padding-box;
+}
+
+.form-head {
+	font: normal normal bold 25px/38px Arial;
+	letter-spacing: 0px;
+	color: darkblue;
+	text-transform: capitalize;
+	opacity: 1;
+	padding-bottom: 20px;
+	
+}
+
+.row-content{
+	display: flex;
+	flex-direction: row;
+	margin-bottom: 10px;
+	align-items: center;
+	border: 0px solid green;
+}
+
+.label{
+	min-width: 140px;
+}
+
+label{
+	padding: 12px 12px 12px 0;
+	display: inline-block;
+}
+
+.text{
+	font-size: 16px;
+	color: black;
+	opacity: 1;
+	font-family: Arial, Helvetica, sans-serif;
+}
+
+.input{
+	width: 100%;
+	padding:12px;
+	border:1px solid gainsboro;
+	border-radius:4px;
+	resize: vertical;
+}
