--- a/Form.css
+++ b/Form.css
@@ -124,3 +124,97 @@ select{
 	color:#42515f;
 	background-color: transparent;
 }
+.button-content{
+	display: flex;
+	margin-bottom: 10px;
+	justify-content: space-between;
+	margin-top: 20px;
+}
+
+.button{
+	font-size: 20px;
+	font-family: Arial, Helvetica, sans-serif;
+	letter-spacing: 0px;
+	color: #42515f;
+	opacity: 1;
+	background: transparent;
+	border:none;
+	font-weight: 400;
+	min-width: 140px;
+	padding:7px 7px;
+	border:1px solid #707070;
+	cursor: pointer;
+}
+
+.submitButton{
+	font-family: Arial, Helvetica, sans-serif;
+	border: none;
+	background-color:#f5f5f5 ;
+	margin-right: 30px;
+}
+
+.resetButton {
+	font-family: Arial, Helvetica, sans-serif;
+	border: none;
+	background-color:#f5f5f5 ;
+	margin-right: 30px;
+
+}
+
+.cancelButton{	
+text-align: center;
+text-decoration: none;
+margin-left: 640px;
+border: none;
+}
+@media only screen and(max-width:960px){
+
+	.form{
+		width: 85%;
+		padding: 44px 20px;
+	}
+}
+
+@media only screen and(max-width:600px){
+	.form{
+		margin-top:10px;
+	}
+
+	.row{
+		flex-direction: column;
+	}
+
+	.uploadButton{
+		justify-content: flex-start;
+	}
+
+	.profile-radio-content{
+		flex-flow: wrap;
+	}
+
+	.submit-reset{
+		width:100px;
+		display: flex;
+		flex-grow: 1;
+		flex-direction: row-reverse;
+		justify-content: space-between;
+		margin-bottom: 20px;
+	}
+
+	.submitButton {
+		margin:0;
+	}
+
+	.button-content {
+		flex-direction: column-reverse;
+		align-items: flex-start;
+	}
+}
+
+error-output {
+		font-size: 12px;
+		font-style:  bold;
+		margin-left: 10px;
+		font-family: 'Times New Roman', Times, serif;
+		color: red;
+}
